index desktop is ready

--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -2658,6 +2658,45 @@
           </div>
         </div>
 
+        <div class="pageblocksl formblock">
+          <div class="container">
+            <div class="formblock__wrapper">
+              <div class="formblock__container">
+                <div class="formblock__items">
+                  <div class="formblock__content">
+                    <div class="formblock__title">
+                      Остались <span class='mark'>вопросы?</span>
+                    </div>
+                    <div class="formblock__text">
+                      Напишите свой вопрос в форме ниже. <br>
+                      Наш менеджер перезвонит и подробно расскажет об интересующих вас продуктах, обновлении
+                      ассортимента и действующих акциях
+                    </div><!-- /.formblock__text -->
+
+                  </div>
+                  <div class="formblock__form">
+                    <form action="">
+                      <div class="formblock__input">
+                        <input type="tel" placeholder='Номер телефона'>
+                      </div>
+                      <div class="formblock__input">
+                        <textarea placeholder='Ваш вопрос' rows='4'></textarea>
+
+                      </div>
+                      <div class="formblock__button">
+                        <button type='submit' class='btn_main'>Задать вопрос</button>
+                      </div>
+                      <div class="formblock__confirm">
+                        Нажимая на кнопку, вы соглашаетесь с условиями <a href="#">Политики конфиденциальности</a>
+                      </div>
+                    </form>
+                  </div>
+                </div><!-- /. -->
+              </div><!-- /. -->
+            </div><!-- /. -->
+          </div>
+        </div>
+
 
 
       </main>
