index desktop is ready

--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -361,7 +361,7 @@
 
             </div>
             <div class="productslider__wrapper">
-              <div class="productslider__container ">
+              <div class="productslider__container " data-slidercontainer='productslider'>
                 <div class="sliderarrows flex">
                   <div class="sliderarrows__left sliderarrow">
                     <svg width="28" height="25" viewBox="0 0 28 25" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -386,7 +386,7 @@
                 </div>
                 <!-- /.sliderarrows -->
 
-                <div class="productslider__slider ">
+                <div class="productslider__slider " data-slider='productslider'>
                   <div class="productslider__slide ">
                     <div class="productslider__item">
 
@@ -851,7 +851,7 @@
 
             </div>
             <div class="productslider__wrapper">
-              <div class="productslider__container ">
+              <div class="productslider__container " data-slidercontainer='productslider'>
                 <div class="sliderarrows flex">
                   <div class="sliderarrows__left sliderarrow">
                     <svg width="28" height="25" viewBox="0 0 28 25" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -876,7 +876,7 @@
                 </div>
                 <!-- /.sliderarrows -->
 
-                <div class="productslider__slider ">
+                <div class="productslider__slider " data-slider='productslider'>
                   <div class="productslider__slide ">
                     <div class="productslider__item">
 
@@ -1343,7 +1343,7 @@
 
             </div>
             <div class="productslider__wrapper">
-              <div class="productslider__container ">
+              <div class="productslider__container " data-slidercontainer='productslider'>
                 <div class="sliderarrows flex">
                   <div class="sliderarrows__left sliderarrow">
                     <svg width="28" height="25" viewBox="0 0 28 25" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1368,7 +1368,7 @@
                 </div>
                 <!-- /.sliderarrows -->
 
-                <div class="productslider__slider ">
+                <div class="productslider__slider " data-slider='productslider'>
                   <div class="productslider__slide ">
                     <div class="productslider__item">
 
