--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -2067,7 +2067,7 @@
                                 <a class="youtubepopup" href="#!"
                                   data-link="//www.youtube.com/embed/2SredNaIqn4?enablejsapi=1" tabindex="0">
                                   <div class="blogcard__image">
-                                    <div class="blogcard__img"><img src="img/video1.jpg" alt="">
+                                    <div class="blogcard__img" style='background-image: url(img/video1.jpg);'>
                                     </div>
                                   </div>
                                   <div class="blogcard__info flex items-center">
@@ -2096,7 +2096,7 @@
                                 <a class="youtubepopup" href="#!"
                                   data-link="//www.youtube.com/embed/2SredNaIqn4?enablejsapi=1" tabindex="0">
                                   <div class="blogcard__image">
-                                    <div class="blogcard__img"><img src="img/video2.jpg" alt="">
+                                    <div class="blogcard__img" style='background-image: url(img/video2.jpg);'>
                                     </div>
                                   </div>
                                   <div class="blogcard__info flex items-center">
@@ -2123,7 +2123,7 @@
                                 <a class="youtubepopup" href="#!"
                                   data-link="//www.youtube.com/embed/2SredNaIqn4?enablejsapi=1" tabindex="0">
                                   <div class="blogcard__image">
-                                    <div class="blogcard__img"><img src="img/video3.jpg" alt="">
+                                    <div class="blogcard__img" style='background-image: url(img/video3.jpg);'>
                                     </div>
                                   </div>
                                   <div class="blogcard__info flex items-center">
