--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -198,7 +198,7 @@
     <div class="headerbottom">
       <div class="container">
         <div class="headerbottom__wrapper cols">
-          <div class="headermain__menu cols_asideblock">
+          <div class="headermain__menu ">
             <a href='#' class='mainmenubtn' data-toggleclick='mainmenu'>
               <img class="burgericon icon--white" src="img/burger.svg" alt="">
               <img class="burgericon icon--blue" src="img/burger_blue.svg" alt="">
@@ -248,7 +248,7 @@
     </div><!-- /.headerbottom -->
   </div>
 
-  <div class="mobilemenu" data-toggle="mainmenu">
+  <div class="mobilemenu onlyMobile" data-toggle="mainmenu">
     <div class="mobilemenu__header">
       <div class="mobilemenu__logo">
         <a href="#" class='logo'><img src="img/logo.svg" alt=""></a>
