--- a/src/html/includes/footer.html
+++ b/src/html/includes/footer.html
@@ -2,8 +2,37 @@
   <div class="footer__main">
     <div class="container">
       <div class="footer__items">
-        <div class="footer__col">
+        <div class="footer__col footer__toppanel">
           <div class="footer_logo"><img src="img/logo_white.svg" alt=""></div><!-- /.footer_logo -->
+
+          <div class="footerpanel onlyMobile">
+            <div class="footerpanel__items">
+              <div class="footerpanel__item footerpanel__search">
+                <div class="footersearch">
+                  <form action="">
+                    <div class="footersearh__input">
+                      <input type="text" placeholder="Найти товары">
+                      <button><img src="img/searchfooter.svg" alt=""></button>
+                    </div><!-- /.footersearh__input -->
+                  </form>
+                </div><!-- /.footersearch -->
+              </div><!-- /.footerpanel__item footerpanel__search -->
+              <div class="footerpanel__item footerpanel__icon">
+                <a href="#" class="iconbutton">
+                  <div class="iconbutton__icon">
+                    <img src="img/footerlike.svg" alt="">
+                  </div><!-- /.iconbutton__icon -->
+                </a><!-- /.iconbutton -->
+              </div>
+              <div class="footerpanel__item footerpanel__icon">
+                <a href="#" class="iconbutton">
+                  <div class="iconbutton__icon">
+                    <img src="img/footercart.svg" alt="">
+                  </div><!-- /.iconbutton__icon -->
+                </a><!-- /.iconbutton -->
+              </div>
+            </div><!-- /.footerpanel__items -->
+          </div>
         </div><!-- /.footer_col -->
         <div class="footer__col footer__catalog">
           <div class="footer__menu">
@@ -37,7 +66,7 @@
 
               </div>
             </div>
-            <div class="footerpanel">
+            <div class="footerpanel onlyDesktop">
               <div class="footerpanel">
                 <div class="footerpanel__items">
                   <div class="footerpanel__item footerpanel__search">
