--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -2100,7 +2100,12 @@
                 </div><!-- /.reviewsblock__item -->
               </div><!-- /.reviewsblock__items -->
               <div class="reviewsblock__nav">
-
+                <a href="" class="reviewsblock__all btn_default"><span>Читать все отзывы </span><svg width="6"
+                    height="9" viewBox="0 0 6 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M1 7.5L4 4.5L1 1.5" stroke="#08105B" stroke-width="1.5" stroke-linecap="round" />
+                  </svg>
+                </a><!-- /.reviewsblock__all -->
+                <a href="#" class="reviewsblock__add btn__border">Оставить свой отзыв</a><!-- /.btn__border -->
               </div><!-- /.reviewsblock__nav -->
             </div><!-- /.reviewsblock -->
           </div>
@@ -2122,7 +2127,7 @@
             </div><!-- /#video-popup -->
             <div class="videoslider">
               <div class="videoslider__container" data-slidercontainer='videoslider'>
-                <div class="sliderarrows flex">
+                <div class="sliderarrows flex onlyDesktop">
                   <div class="sliderarrows__left sliderarrow">
                     <svg width="28" height="25" viewBox="0 0 28 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M11.833 1L0.999881 12.5L11.833 24" stroke="#08105B" stroke-width="2"
@@ -2334,8 +2339,8 @@
             </div>
             <div class="blogslider">
               <div class="blogslider__container" data-slidercontainer="blogslider">
-                <div class="sliderarrows flex">
-                  <div class="sliderarrows__left sliderarrow">
+                <div class="sliderarrows flex onlyDesktop">
+                  <div class="sliderarrows__left sliderarrow ">
                     <svg width="28" height="25" viewBox="0 0 28 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M11.833 1L0.999881 12.5L11.833 24" stroke="#08105B" stroke-width="2"
                         stroke-linecap="round" stroke-linejoin="round" />
